--- a/remote_Job/template/jobapp/index.html
+++ b/remote_Job/template/jobapp/index.html
@@ -31,7 +31,7 @@
   <div class="container">
     <div class="row mb-5 justify-content-center">
       <div class="col-md-7 text-center">
-        <h2 class="section-title mb-2 text-white">Job Finder Stats</h2>
+        <h2 class="section-title mb-2 text-white">Remote Job Finder Stats</h2>
         <p class="lead text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita unde officiis
           recusandae sequi excepturi corrupti.</p>
       </div>
@@ -56,7 +56,7 @@
         <div class="d-flex align-items-center justify-content-center mb-2">
           <strong class="number" data-number="{{ total_completed_jobs }}">0</strong>
         </div>
-        <span class="caption">Jobs Filled</span>
+        <span class="caption">Jobs Closed</span>
       </div>
 
       <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
