--- a/remote_Job/template/account/employee-edit-profile.html
+++ b/remote_Job/template/account/employee-edit-profile.html
@@ -45,9 +45,10 @@
         <form method="POST" enctype="multipart/form-data" class="p-4 border rounded">
           
           {% csrf_token %}
-          <span class="text-primary d-block mb-6">
+          <span class="text-primary d-block mb-6" style="text-align: center;">
             <img src="{{ form.instance.photo.url }}" alt="Profile Picture" style="border-radius: 50%;" width="300" height="300">
-        </span>        
+        </span>
+               
           {% for field in form %}
           {% if field.name == 'gender' %}
           <div class="row form-group mb-4">
