--- a/remote_Job/template/account/password_reset_complete.html
+++ b/remote_Job/template/account/password_reset_complete.html
@@ -22,7 +22,7 @@
             
                 <p class="mb-5">Your password has been set. You can <a href="{% url 'account:login' %}"
                     class="js-clone-nav btn btn-primary border-width-2 d-none d-lg-inline-block ov-fix"><span
-                      class="mr-2 icon-lock_outline"></span>Log In</a>
+                      class="mr-2 icon-lock_outline"></span>Log In</a> now. 
 
             </div>
         </div>
