--- a/remote_Job/template/account/password_reset_confirm.html
+++ b/remote_Job/template/account/password_reset_confirm.html
@@ -25,10 +25,26 @@
                     <form action="." method="post">
                         {% csrf_token %}
                         <div class="form-group">
-                            {{ form.new_password1.label_tag }} {{ form.new_password1 }}
+                            {{ form.new_password1.label_tag }}
+                            <div class="input-group">
+                                {{ form.new_password1 }}
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-outline-secondary" onclick="togglePassword('id_new_password1')">
+                                        <span class="oi oi-eye"></span>
+                                    </button>
+                                </div>
+                            </div>
                             <p style="color: red;">{{ form.new_password1.errors }}</p>
                         
-                            {{ form.new_password2.label_tag }} {{ form.new_password2 }}
+                            {{ form.new_password2.label_tag }}
+                            <div class="input-group">
+                                {{ form.new_password2 }}
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-outline-secondary" onclick="togglePassword('id_new_password2')">
+                                        <span class="oi oi-eye"></span>
+                                    </button>
+                                </div>
+                            </div>
                             <p style="color: red;">{{ form.new_password2.errors }}</p> 
                         </div>
                         
@@ -43,4 +59,16 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function togglePassword(inputId) {
+            var passwordInput = document.getElementById(inputId);
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+            } else {
+                passwordInput.type = "password";
+            }
+        }
+    </script>
+
 {% endblock %}
