--- a/remote_Job/template/jobapp/job_mail.html
+++ b/remote_Job/template/jobapp/job_mail.html
@@ -93,15 +93,15 @@
     </style>
 </head>
 
-<body style="background-color: #a44a9e; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
+<body style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
     <table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation"
-        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #0f3242;">
+        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
         <tbody>
             <tr>
                 <td>
                     <table class="row row-1" align="center" width="100%" border="0" cellpadding="0" cellspacing="0"
                         role="presentation"
-                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #101b20;">
+                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
                         <tbody>
                             <tr>
                                 <td>
@@ -218,8 +218,7 @@
                                                                         style="font-size: 12px; font-family: Rubik, Trebuchet MS, Helvetica, sans-serif; mso-line-height-alt: 18px; color: #ffffff; line-height: 1.5;">
                                                                         <p
                                                                             style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 33px;">
-                                                                            <span style="font-size:22px;"><strong>Message
-                                                                                    Recieved.</strong></span></p>
+                                                                            <span style="font-size:22px;"><strong>Application Status</strong></span></p>
                                                                     </div>
                                                                 </div>
                                                             </td>
@@ -236,7 +235,7 @@
                                                                     <p
                                                                         style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 25.2px;">
                                                                         <body>
-                                                                            <h1>Application Status</h1>
+                                                                            
                                                                         
                                                                             {% if buttonType == 'select' %}
                                                                             <p>Congratulations! You have been selected for further consideration for the position of {{ position }} on our company: {{ company_name }}. We are impressed with your qualifications and look forward to discussing your application in more detail.</p>
