--- a/remote_Job/template/jobapp/mail.html
+++ b/remote_Job/template/jobapp/mail.html
@@ -93,15 +93,15 @@
     </style>
 </head>
 
-<body style="background-color: #a44a9e; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
+<body style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
     <table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation"
-        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #0f3242;">
+        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
         <tbody>
             <tr>
                 <td>
                     <table class="row row-1" align="center" width="100%" border="0" cellpadding="0" cellspacing="0"
                         role="presentation"
-                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #101b20;">
+                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
                         <tbody>
                             <tr>
                                 <td>
