--- a/remote_Job/template/jobapp/result.html
+++ b/remote_Job/template/jobapp/result.html
@@ -51,7 +51,13 @@
       {% endfor %}
     </div>
     {% if no_results %}
-        <h2>No result found..!!!</h2>
+    <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-6">          
+              <h2 class="mx-auto"> No Result Found..!!! </h2>
+          </div>
+      </div>
+  </div>
     {% else %}
         <!-- Display your search results here -->
         {% for job in page_obj %}
