--- a/remote_Job/template/account/employee-edit-profile.html
+++ b/remote_Job/template/account/employee-edit-profile.html
@@ -42,46 +42,57 @@
         </div>
         {% endfor %}
         {% endif %}
-        <form method="POST" enctype="multipart/form-data" class="p-4 border rounded">
+        <form method="POST" enctype="multipart/form-data" class="p-4 border rounded" style="background-color: #ffffff; position: relative;">
+          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
           
-          {% csrf_token %}
-          <span class="text-primary d-block mb-6" style="text-align: center;">
-            <img src="{{ form.instance.photo.url }}" alt="Profile Picture" style="border-radius: 50%;" width="300" height="300">
-        </span>
-               
-          {% for field in form %}
-          {% if field.name == 'gender' %}
-          <div class="row form-group mb-4">
-            <div class="col-md-12 mb-3 mb-md-0">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" id="male gender" value="M"
-                  {% if field.value == 'M' %} checked {% endif %}>
-                <label class="form-check-label" for="male">Male</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" id="female" value="F"
-                  {% if field.value == 'F' %} checked {% endif %}>
-                <label class="form-check-label" for="female">Female</label>
+          <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
+            <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+            <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
+            {% csrf_token %}
+            <span class="text-primary d-block mb-6" style="text-align: center; object-fit: cover;">
+              <img src="{{ form.instance.photo.url }}" alt="Profile Picture" style="border-radius: 50%;" width="300" height="300">
+          </span>
+                
+            {% for field in form %}
+            {% if field.name == 'gender' %}
+            <div class="row form-group mb-4">
+              <div class="col-md-12 mb-3 mb-md-0">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="gender" id="male gender" value="M"
+                    {% if field.value == 'M' %} checked {% endif %}>
+                  <label class="form-check-label" for="male">Male</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="gender" id="female" value="F"
+                    {% if field.value == 'F' %} checked {% endif %}>
+                  <label class="form-check-label" for="female">Female</label>
+                </div>
               </div>
             </div>
-          </div>
 
-          {% else %}
+            {% else %}
 
-          <div class="row form-group">
-            <div class="col-md-12 mb-3 mb-md-0">
-              <label class="text-black" for="id_{{ field.name }}">{{ field.label }}</label>
-              <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
-                id="id_{{ field.name }}" value="{{ field.value }}"
-                placeholder="{{ field.field.widget.attrs.placeholder }}">
+            <div class="row form-group">
+              <div class="col-md-12 mb-3 mb-md-0">
+                <label class="text-black" for="id_{{ field.name }}">{{ field.label }}</label>
+                <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
+                  id="id_{{ field.name }}" value="{{ field.value }}"
+                  placeholder="{{ field.field.widget.attrs.placeholder }}">
+              </div>
             </div>
-          </div>
 
-          {% endif %}
-          {% endfor %}
-          <div class="row form-group">
-            <div class="col-md-12">
-              <input type="submit" value="Update" class="btn px-4 btn-primary text-white">
+            {% endif %}
+            {% endfor %}
+            <div class="row form-group">
+              <div class="col-md-6 mb-3">
+                <a href="{{ user.pdf_document.url }}" target="_blank" class="btn px-4 btn-primary text-white">
+                    <i class="fas fa-eye"></i> Preview
+                </a>
+            </div>
+              <div class="col-md-12">
+                <input type="submit" value="Update" class="btn px-4 btn-primary text-white">
+              </div>
             </div>
           </div>
 
