--- a/remote_Job/template/jobapp/applicant-details.html
+++ b/remote_Job/template/jobapp/applicant-details.html
@@ -32,9 +32,10 @@
       <div class="col-lg-5">
               
         <h3 class="mb-4">{{ applicant.get_full_name }}</h3>
-        <span class="text-primary d-block mb-6" >
-          <img src="{{ applicant.photo.url }}" alt="Profile Picture" style="border-radius: 50%;" width="300" height="300">
+        <span class="text-primary d-block mb-6" style="width: 300px; height: 300px; overflow: hidden; border-radius: 50%;">
+          <img src="{{ applicant.photo.url }}" alt="Profile Picture" style="width: 100%; height: 100%; object-fit: cover;">
       </span>
+      
         <p><h3>Email :</h3>{{ applicant.email }}</p>
         <p><h3>Phone Number :</h3><a href="tel:+977{{ applicant.phone_number }}">+977 {{ applicant.phone_number }}</a></p>
         
@@ -159,11 +160,11 @@
       .catch(error => {
         console.error('Error:', error);
         // Show an error message to the user
-        Swal.fire({icon:'warning', text: 'Failed to send email. Please try again.'});
+        Swal.fire({icon:'error', text: 'Failed to send email. Please try again.'});
       });
     } else {
       // Show a validation error if any of the fields are empty
-      Swal.fire( {icon:'warning', text:" Email, Position, and Company name are required!"});
+      Swal.fire( {icon:'error', text:" Email, Position, and Company name are required!"});
     }
   }
 </script>
