--- a/remote_Job/template/jobapp/post-job.html
+++ b/remote_Job/template/jobapp/post-job.html
@@ -34,14 +34,21 @@
             <div class="row">
        
               <div class="col-6">
-                <a href="#" class="btn btn-block btn-primary btn-md">Save Job</a>
+                <a href="{% url 'jobapp:dashboard' %}" class="btn btn-block btn-primary btn-md">View All My Jobs</a>
               </div>
             </div>
           </div>
         </div>
-        <form  method="POST" enctype="multipart/form-data">
-        <div class="row mb-5 p-4 p-md-5 border rounded">
-          <div class="col-lg-12">
+        <form method="POST" enctype="multipart/form-data" class="p-4 rounded-lg" style="background-color: #ffffff; position: relative;">
+          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
+
+        <div class="row mb-5 p-4 p-md-5 border rounded" style="background-color: #ffffff; position: relative;">
+          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
+          <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
+            <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+            <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
               <h3 class="text-black mb-5 border-bottom pb-2">Job Details</h3>
                   {% if form.errors %}
                         {% for field in form %}
