--- a/remote_Job/template/account/employee-edit-profile.html
+++ b/remote_Job/template/account/employee-edit-profile.html
@@ -87,7 +87,7 @@
             <div class="row form-group">
               <div class="col-md-6 mb-3">
                 <a href="{{ user.pdf_document.url }}" target="_blank" class="btn px-4 btn-primary text-white">
-                    <i class="fas fa-eye"></i> Preview
+                    <i class="oi oi-eye"></i> 
                 </a>
             </div>
               <div class="col-md-12">
@@ -101,5 +101,6 @@
     </div>
   </div>
 </section>
+
 
 {% endblock %}
