--- a/remote_Job/template/account/password_reset_confirm.html
+++ b/remote_Job/template/account/password_reset_confirm.html
@@ -40,10 +40,10 @@
                             <div class="input-group">
                                 {{ form.new_password2 }}
                                 <div class="input-group-append">
-                                    <button type="button" class="btn btn-outline-secondary" onclick="togglePassword('id_new_password2')">
-                                        <span class="oi oi-eye"></span>
-                                    </button>
-                                </div>
+                                    <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
+                                      <i class="fa-solid fa-eye fa-lg" id="eyeIcon" style="color: #000000;"></i> 
+                                    </button> 
+                                  </div>
                             </div>
                             <p style="color: red;">{{ form.new_password2.errors }}</p> 
                         </div>
@@ -61,14 +61,22 @@
     </div>
 
     <script>
-        function togglePassword(inputId) {
-            var passwordInput = document.getElementById(inputId);
-            if (passwordInput.type === "password") {
-                passwordInput.type = "text";
-            } else {
-                passwordInput.type = "password";
-            }
+        function togglePassword(fieldId) {
+          var eyeIcon = document.getElementById('eyeIcon');
+      
+          // Check the current color
+          var currentColor = eyeIcon.style.color;
+      
+          // Toggle color
+        //   if (currentColor === 'blue') {
+        //     eyeIcon.style.color = '#000000'; // Change back to black
+        //   } else {
+        //     eyeIcon.style.color = 'blue'; // Change to purple
+        //   }
+          const passwordField = document.getElementById(fieldId);
+          const fieldType = passwordField.type === 'password' ? 'text' : 'password';
+          passwordField.type = fieldType;
         }
-    </script>
+      </script>
 
 {% endblock %}
