--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -17,10 +17,11 @@
     </div>
   </div>
 </section>
+
 <section class="site-section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-10 mb-5">
+      <div class="col-lg-10 mb-5 mx-auto" >
         {% include 'messages.html' %}
         {% if form.errors %}
           {% for field in form %}
@@ -38,7 +39,7 @@
             </div>
           {% endfor %}
         {% endif %}
-        <form method="POST" action="#" class="p-4 rounded-lg" id="login-form" style="background-color: #ffffff; position: relative;">
+        <form method="POST" action="#" class="p-4 rounded-lg " id="login-form" style="background-color: #ffffff; position: relative;">
           <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
           <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
           <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
@@ -59,11 +60,14 @@
                       <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
                         id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
                       {% if field.field.widget.input_type == 'password' %}
-                        <div class="input-group-append">
-                          <button type="button" class="btn btn-outline-secondary" onclick="togglePassword('id_{{ field.name }}')">
-                            <span class="oi oi-eye"></span> <!-- Bootstrap 4 Eye Icon -->
-                          </button>
-                        </div>
+                      <div class="input-group-append">
+                        <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
+                          <i class="fa-solid fa-eye fa-lg" id="eyeIcon" style="color: #000000;"></i> 
+                        </button> 
+                      </div>
+         
+                          
+                        
                       {% endif %}
                     </div>
                   {% endif %}
@@ -72,7 +76,7 @@
               </div>
             {% endfor %}
             <div class="row form-group">
-              <div class="col-md-12">
+              <div class="col-md-12 ">
                 <input type="submit" value="Sign In" class="btn px-4 btn-primary text-white">
               </div>
             </div>
@@ -97,6 +101,17 @@
 
 <script>
   function togglePassword(fieldId) {
+    var eyeIcon = document.getElementById('eyeIcon');
+
+    // Check the current color
+    var currentColor = eyeIcon.style.color;
+
+    // Toggle color
+    if (currentColor === 'blue') {
+      eyeIcon.style.color = '#000000'; // Change back to black
+    } else {
+      eyeIcon.style.color = 'blue'; // Change to purple
+    }
     const passwordField = document.getElementById(fieldId);
     const fieldType = passwordField.type === 'password' ? 'text' : 'password';
     passwordField.type = fieldType;
