--- a/remote_Job/template/jobapp/job_mail.html
+++ b/remote_Job/template/jobapp/job_mail.html
@@ -146,7 +146,7 @@
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; background-color: #204c62; width: 600px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; background-color: #101b20; width: 600px;"
                                         width="600">
                                         <tbody>
                                             <tr>
@@ -179,7 +179,7 @@
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1f4b5f; color: #000000; width: 600px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #096d3b; color: #000000; width: 600px;"
                                         width="600">
                                         <tbody>
                                             <tr>
@@ -271,7 +271,7 @@
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1f4b5f; color: #000000; width: 600px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #096d3b; color: #000000; width: 600px;"
                                         width="600">
                                         <tbody>
                                             <tr>
@@ -305,14 +305,14 @@
                     </table>
                     <table class="row row-5" align="center" width="100%" border="0" cellpadding="0" cellspacing="0"
                         role="presentation"
-                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #233f5e; width: 600px;"
+                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #096d3b; width: 600px;"
                         width="600">
                         <tbody>
                             <tr>
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #233f5e ; color: #000000; width: 600px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #096d3b ; color: #000000; width: 600px;"
                                         width="600">
                                         <tbody>
                                             <tr>
@@ -325,8 +325,11 @@
                                                             <td class="pad"
                                                                 style="width:100%;padding-right:0px;padding-left:0px;">
                                                                 <div class="alignment" align="center"
-                                                                
-                                                                    style="line-height:10px">Remote Job Finder</div>
+                                                                    style="color: #ffffff; line-height:10px">Regards,</div>
+                                                                    <br>
+                                                                <div class="alignment" align="center"
+                                                                    style="color: #ffffff; line-height:10px">Remote Job Finder</div>
+
                                                             </td>
                                                         </tr>
                                                     </table>
