--- a/remote_Job/template/jobapp/mail.html
+++ b/remote_Job/template/jobapp/mail.html
@@ -147,7 +147,7 @@
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; background-color: #204c62; width: 600px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; background-color: #101b20; width: 600px;"
                                         width="600">
                                         <tbody>
                                             <tr>
@@ -180,7 +180,7 @@
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1f4b5f; color: #000000; width: 600px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #096d3b; color: #000000; width: 600px;"
                                         width="600">
                                         <tbody>
                                             <tr>
@@ -260,7 +260,7 @@
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1f4b5f; color: #000000; width: 600px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #096d3b; color: #000000; width: 600px;"
                                         width="600">
                                         <tbody>
                                             <tr>
@@ -294,14 +294,14 @@
                     </table>
                     <table class="row row-5" align="center" width="100%" border="0" cellpadding="0" cellspacing="0"
                         role="presentation"
-                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #233f5e; width: 600px;"
+                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #096d3b; width: 600px;"
                         width="600">
                         <tbody>
                             <tr>
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #233f5e ; color: #000000; width: 600px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #096d3b ; color: #000000; width: 600px;"
                                         width="600">
                                         <tbody>
                                             <tr>
@@ -314,7 +314,10 @@
                                                             <td class="pad"
                                                                 style="width:100%;padding-right:0px;padding-left:0px;">
                                                                 <div class="alignment" align="center"
-                                                                    style="line-height:10px">Remote Job Finder</div>
+                                                                    style="color: #ffffff; line-height:10px">Regards,</div>
+                                                                    <br>
+                                                                <div class="alignment" align="center"
+                                                                    style="color: #ffffff; line-height:10px">Remote Job Finder</div>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -339,7 +342,7 @@
                                                         <tr>
                                                             <td class="pad">
                                                                 <div
-                                                                    style="color:#ffffff;direction:ltr;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:12px;font-weight:400;letter-spacing:0px;line-height:180%;text-align:left;mso-line-height-alt:21.6px;">
+                                                                    style="color:#ffffff;direction:ltr;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:12px;font-weight:400;letter-spacing:0px;line-height:180%;text-align:left;">
                                                                     <p style="margin: 0;"> Kharipati,
                                                                         Bhaktapur, Nepal <br>remotejob007@gmail.com <br> Ward no: 6
                                                                         <br>9868204063</p>
