--- a/remote_Job/template/scripts.html
+++ b/remote_Job/template/scripts.html
@@ -1,6 +1,6 @@
 {% load static %} 
     <!-- SCRIPTS -->
-
+    <script src="https://kit.fontawesome.com/580e28b45d.js" crossorigin="anonymous"></script>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
