--- a/remote_Job/template/account/employee-registration.html
+++ b/remote_Job/template/account/employee-registration.html
@@ -77,7 +77,7 @@
                                           id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
                                           <div class="input-group-append">
                                             <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
-                                              <i class="fa-solid fa-eye fa-lg" id="eyeIcon" style="color: #000000;"></i> 
+                                              <i class="fa-solid fa-eye fa-lg" id="eyeIcon" style="color: #4a4646;"></i> 
                                             </button> 
                                           </div>
                                 </div>
