--- a/remote_Job/template/account/password_reset_confirm.html
+++ b/remote_Job/template/account/password_reset_confirm.html
@@ -29,8 +29,8 @@
                             <div class="input-group">
                                 {{ form.new_password1 }}
                                 <div class="input-group-append">
-                                    <button type="button" class="btn btn-outline-secondary" onclick="togglePassword('id_new_password1')">
-                                        <span class="oi oi-eye"></span>
+                                    <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
+                                        <span class="fa-solid fa-eye fa-lg" id="eyeIcon" style="color: #000000;"></span>
                                     </button>
                                 </div>
                             </div>
@@ -63,7 +63,7 @@
     <script>
         function togglePassword(fieldId) {
           var eyeIcon = document.getElementById('eyeIcon');
-      
+        
           // Check the current color
           var currentColor = eyeIcon.style.color;
       
