--- a/remote_Job/template/scripts.html
+++ b/remote_Job/template/scripts.html
@@ -15,3 +15,17 @@
     <script>window.CKEDITOR_BASEPATH = '/static/ckeditor/ckeditor/';</script> 
  
     <script src="{% static 'js/custom.js' %}"></script> 
+    <script>
+        const togglePassword = document.querySelector('#togglePassword');
+        const password = document.querySelector('#id_password');
+      
+        togglePassword.addEventListener('click', function (e) {
+            // Toggle the type attribute
+            const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+            password.setAttribute('type', type);
+      
+            // Toggle the eye icon classes
+            this.classList.toggle('fa-eye');
+            this.classList.toggle('fa-eye-slash');
+        });
+      </script>
