--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -61,8 +61,9 @@
                         id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
                       {% if field.field.widget.input_type == 'password' %}
                       <div class="input-group-append">
-                        <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
-                          <i class="fa-solid fa-eye fa-lg" id="eyeIcon" style="color: #000000;"></i> 
+                        <button type="button" class="btn btn-outline-eye" >
+                          <i class="fa-solid fa-eye fa-lg" id="togglePassword" style="color: #4a4646;"></i> 
+                          
                         </button> 
                       </div>
          
@@ -99,7 +100,7 @@
   </div>
 </section>
 
-<script>
+<!-- <script>
   function togglePassword(fieldId) {
     var eyeIcon = document.getElementById('eyeIcon');
 
@@ -116,6 +117,7 @@
     const fieldType = passwordField.type === 'password' ? 'text' : 'password';
     passwordField.type = fieldType;
   }
-</script>
+</script> -->
+
 
 {% endblock %}
