--- a/remote_Job/template/jobapp/applicant-details.html
+++ b/remote_Job/template/jobapp/applicant-details.html
@@ -20,51 +20,52 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3">
-        <div class="border p-4 rounded">
-          <ul class="list-unstyled block__47528 mb-0">
-            <li><span class="active">Applicant</span></li>
-            <li><a href="#">Topic 1</a></li>
-            <li><a href="#">Topic 2</a></li>
-          </ul>
+        <div class="border p-3 rounded">
+          <h3>Select/Reject:</h3> 
+            <div class="d-flex">
+              <span class="p-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('select')"><i class="fa-solid fa-circle-check fa-beat fa-2xl" style="color: #3cda10;"></i> </span>
+              <span class="p-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('reject')"><i class="fa-solid fa-circle-xmark  fa-beat fa-2xl" style="color: #da0707;"></i></span>
+          </div>
+          
         </div>
       </div>
       
-      <div class="col-lg-5">
-              
-        <h3 class="mb-4">{{ applicant.get_full_name }}</h3>
-        <span class="text-primary d-block mb-6" style="width: 300px; height: 300px; overflow: hidden; border-radius: 50%;">
-          <img src="{{ applicant.photo.url }}" alt="Profile Picture" style="width: 100%; height: 100%; object-fit: cover;">
-      </span>
-      
-        <p><h3>Email :</h3>{{ applicant.email }}</p>
-        <p><h3>Phone Number :</h3><a href="tel:+977{{ applicant.phone_number }}">+977 {{ applicant.phone_number }}</a></p>
-        
-        <p><h3>Gender :</h3>
+      <div class="col-lg-5 border p-4 rounded text-center">
+        <h1 style="font-size: x-large;">Applicant Details</h1>
+
+
+            <span class="text-primary d-block mb-6 mx-auto" style="width: 300px; height: 300px; overflow: hidden; border-radius: 50%; background-color: #f8f9fa; border: 1px solid #dee2e6; display: flex; justify-content: center; align-items: center;">
+            <img src="{{ applicant.photo.url }}" alt="Profile Picture" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        </span>
+        <h2 class="mb-4">{{ applicant.get_full_name }}</h2>
+    
+        <!-- <h2>Email: <span style="color: #3c2727;">{{ applicant.email }}</span></h2> -->
+        <h2 style="font-size: larger;">Contact: <a  href="tel:+977{{ applicant.phone_number }}">{{ applicant.phone_number }}</a></h2>
+    
+        <h2 style="font-size: larger;">Gender:
             {% if applicant.gender == 'M' %}
-                Male
+            <span style=" color: #3c2727; text-size-adjust: initial;">Male</span>
             {% else %}
-                Female
+            <span style="color: #d9534f; text-size-adjust: initial;">Female</span>
             {% endif %}
-        </p>
-        <div class="d-flex">
-              <button type="button" class="btn btn-success btn-md mt-4 mr-2" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('select')">Select</button>
-              <button type="button" class="btn btn-danger btn-md mt-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('reject')">Reject</button>
-          </div>
-      </div>
-      <div class="col-lg-3">
+        </h2>
+    </div>
+    
+      <div class="col-lg-3 ">
         <div class="border p-4 rounded">
             <h2>Resume:</h2>
             {% if applicant.pdf_document %}
                 <div class="row">
-                  <div class="col-md-6 mt-2 ">
+                  <div class="col-md-6 p-3">
                     <a href="{{ applicant.pdf_document.url }}" target="_blank" >
-                      <i class="fa-regular fa-eye fa-beat fa-2xl ml-4" style="color: #000000;"></i>
+                      <i class="fa-regular fa-eye fa-beat fa-2xl " style="color: #000000;"></i>
                     </a>
+                  
                 </div>
-                <div class="col-md-6 mt-2">
-                    <a href="{{ applicant.pdf_document.url }}" download="resume.pdf" >
-                      <i class="fa-sharp fa-solid fa-download fa-bounce fa-2xl" style="color: #000000;"></i>
-                    </a>
+                <div class="col-md-6  p-3">
+                  <a href="{{ applicant.pdf_document.url }}" download="resume.pdf" >
+                    <i class="fa-sharp fa-solid fa-download fa-bounce fa-2xl " style="color: #000000;"></i>
+                  </a> 
                 </div>
                 
             {% else %}
@@ -93,16 +94,17 @@
     
           <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" required>
+            <input type="email" class="form-control" id="email" value="{{ applicant.email }}" readonly>
+          </div>
+          <div class="form-group">
+            <label for="company_name">Company Name:</label>
+            <input type="text" class="form-control" id="company_name" value="{{ user.first_name }} Company" readonly>
           </div>
           <div class="form-group">
             <label for="position">Position:</label>
             <input type="text" class="form-control" id="position" required>
           </div>
-          <div class="form-group">
-            <label for="company_name">Company Name:</label>
-            <input type="text" class="form-control" id="company_name" required>
-          </div>
+          
           <button type="button" class="btn btn-primary" onclick="sendEmail()">Submit</button>
         </form>
       </div>
